1. Fix handling of protocols by using URI rather than URL. 2. add dap4 to InvService and ThreddsDataFactory